# ChessAI

./: .gitattributes  Bishop.cpp  Bishop.hpp  Board.cpp  Board.hpp  CMakeLists.txt  Game.cpp  Game.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Piece.cpp  Piece.hpp  Player.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp  main.cpp  util.cpp  util.hpp
Tests/: Test.cpp  Test.hpp
src/: Bishop.cpp  Bishop.hpp  Board.cpp  Board.hpp  Game.cpp  Game.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Piece.hpp  Player.cpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp  util.hpp
